--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,7 +6,11 @@
     "cypress.config.*",
     "nightwatch.conf.*",
     "playwright.config.*",
-    "eslint.config.*"
+    "eslint.config.*",
+    "tests/**/*.ts",
+    "src/**/*.test.ts",
+    "src/**/*.spec.ts",
+    "src/**/*.d.ts"
   ],
   "compilerOptions": {
     "noEmit": true,
@@ -14,6 +18,6 @@
 
     "module": "ESNext",
     "moduleResolution": "Bundler",
-    "types": ["node"]
+    "types": ["node", "vitest/globals"]
   }
 }
